objects/FieloCH__Mission__c.object
<CustomObject>
    <customHelpPage>FieloCH__MissionHelpBackend</customHelpPage>
    <fields>
        <fullName>FieloCH__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FieloCH__DynamicObjective__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__FieldName__c</fullName>
        <description>Name of the field with number value of transaction or event</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Field to Aggregate</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCH__LogicalExpression__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Logical Expression</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCH__Object__c</fullName>
        <description>FieloEE_Transaction__c or Event__c</description>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FieloEE__Event__c</fullName>
                </value>
                <value>
                    <fullName>FieloEE__Transaction__c</fullName>
                </value>
                <value>
                    <fullName>FieloEE__BadgeMember__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__ObjectiveField__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCH__ObjectiveType__c</fullName>
        <description>Define the objetive of the mission, whether if the mission will count or will sum an specific amount.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Counter</fullName>
                </value>
                <value>
                    <fullName>Summary</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Max Value</fullName>
                </value>
                <value>
                    <fullName>Last</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__ObjectiveValue__c</fullName>
        <label>Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__Operator__c</fullName>
        <description>Type of operator that will be evaluated</description>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equal</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Mission</label>
    <listViews>
        <fullName>FieloCH__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>FieloCH__Description__c</columns>
        <columns>FieloCH__Object__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Missions</pluralLabel>
    <recordTypes>
        <fullName>FieloCH__WithObjective</fullName>
        <active>true</active>
        <description>Mission that must accomplished an objective. For example create 10 transactions during the period of the challenge. The status will &quot;Not accomplish&quot;  until the objective condition is true</description>
        <label>With Objective</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCH__WithoutObjective</fullName>
        <active>true</active>
        <description>In this types of mission the objective is in the challenge and the mission purpose is to collect or summarise Members actions.</description>
        <label>Without Objective</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>